# nctu-self-driving-cars-course

./: .gitignore  README.md
SDC_HW3/: README.md  sdc_ekf_hw.rviz
SDC_HW3/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
SDC_HW3/report/: .~lock.309605008_SDC_HW3.odt#  309605008_SDC_HW3.odt  Assignment 3 Kalman Filter sensor fusion.pptx
SDC_HW3/report/Submission/: ekf_template.yaml
SDC_HW4/: hw4.rviz
SDC_HW4/catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
SDC_HW4/catkin_ws/devel/lib/pkg/: downsample  pcl_load  (+1 more)
SDC_HW4/catkin_ws/src/pkg/: CMakeLists.txt
SDC_HW4/report/: 309605008_hw4.md
final/Argo evaluation/: eval_tracking.py  run_tracking.bash
final/Argo evaluation/Argo_Tracking_Evaluation/: 05_0825.csv  05_0875.csv  results_tracking_val_cbgs_evaluation.csv
final/argoverse_cbgs_kf_tracker/: .run.sh.swp  ab3dmot.py  ab3dmot_GMF.py  run.sh  run_ab3dmot.py  run_ab3dmot_GMF.py  test_rts.py
final/catkin_ws/src/argo_tracking/: CMakeLists.txt  package.xml
final/catkin_ws/src/argo_tracking/launch/: viz_track_result.launch
final/catkin_ws/src/argo_tracking/rviz_config/: tracking_result_viz.rviz
final/catkin_ws/src/argo_tracking/src/: viz_track_result.cpp
final/report/: ab3dmot_GMF.py  run_ab3dmot_GMF.py  自駕車期末報告.odt
mid/catkin_ws/: .~lock.Q1result.csv#  .~lock.modifyQ1.csv#  Q1result.csv  modifyQ1.csv
mid/catkin_ws/src/localization_309605008/: CMakeLists.txt  package.xml
mid/catkin_ws/src/pkg/: CMakeLists.txt  package.xml
mid/report/: README.md  mid_report.odt  submit_1.csv  submit_2.csv  submit_3.csv
(+22338 files in other folders)
